# Scheduler

./: README.md  pyproject.toml
scheduler/: __main__.py  common.py  events.py  input_parser.py  input_pasrser.py  logging_utils.py  methods.py  playground.ipynb  scripts.py  solver.py
scheduler/data/in/: arrivals_1.csv  change_times_1.csv
