[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["zaripov <zaripov.ra@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5.0"
matplotlib = "^3.8.2"

[tool.poetry.scripts]
gen_data = "scheduler.scripts:gen_data"
run_algo = "scheduler.scripts:run_algo"
profiler = "scheduler.scripts:profiler"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
